# Bayesian-inference-with-surrogates

./: .gitignore  README.md  prob_surrogates_bayes.bib  pyproject.toml
core/: inverse_problem.py  surrogate.py
experiments/: test.ipynb
experiments/benchmarks/: README.md  benchmark.py  diagnostics.py  multichain_sweep.yaml  plots.py  replicate_loader.py  smoke_test.yaml  smoke_test_pde.yaml  submit_analyze.sh  submit_benchmark.sh  submit_smoke_test.sh
experiments/elliptic_pde/: analyze.py  diagnose_rep.py  experiment.py  notebook.ipynb  reconstruct.py  run_add_rkpcn.py  run_manual.py  runner.py  submit_runner.sh  submit_validate.sh  validate_ep.py
experiments/fourier_features/: rff_pytorch_test.ipynb
experiments/linear_Gaussian/: Gaussian.py  LinGaussTest.py  analytical_analysis.py  convolution_ep_eup.ipynb  helper.py  inverse_problem_setup.py  linear_Gaussian_experiment.ipynb  run_coverage_test.py  runner.py  test_Gaussian.ipynb
helpers/: distribution_utils.py  gpjax_utils.py  inverse_problem.py  mcmc_uncertainty_prop.py  rectified_gaussian.py  surrogate.py
papers/: latex_macros_general.tex  latex_macros_gp_inv_prob.tex  latex_macros_unc_prop.tex  noisy_mcmc_surrogates.tex  post_approx_with_GP_emulators.bib  post_approx_with_GP_emulators.tex  prob_surrogates_bayes.bib  prob_surrogates_review.synctex(busy)  prob_surrogates_review.tex
samplers/: mcmc_uncertainty_prop.py
tests/: test_chain_combiner.py  test_gp_surrogate.py  test_linear_gaussian.py  test_pde.py  test_rkpcn.py  test_rkpcn_adaptation.py  test_vsem.py
uncprop/: custom_types.py
(+123 files in other folders)
